<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ca.qc.lbpsb.fusion.fcmnotification.ChannelsActivity_Employee">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cccaca"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!--top user intro -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"

                android:background="@android:color/white"
                android:orientation="vertical">

                <!--<Button-->
                    <!--android:id="@+id/btnViewNotification"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:layout_marginBottom="20dp"-->
                    <!--android:layout_marginRight="30dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="View Notifications"-->
                    <!--android:textColor="#333" />-->

                <TextView
                    android:id="@+id/txtUserIntro"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:text="@string/user_intro"
                    android:textAlignment="center"
                    android:textColor="#333"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cccaca"
                    android:textColor="#333" />
            </LinearLayout>

            <!--Wrapper user channels -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <!--FUSION UPDATE LAYOUT-->
                <LinearLayout
                    android:id="@+id/linear_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:tag="site_updates"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="2dp"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginBottom="@dimen/margin"
                        android:orientation="horizontal">


                        <Switch
                            android:id="@+id/sw_fusion"
                            android:layout_width="65dp"
                            android:checked="false"
                            android:tag="1"
                            android:clickable="false"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />


                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="5"

                            android:text="@string/fusion"

                            android:textColor="#000"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="@dimen/pad"
                        android:paddingRight="@dimen/pad"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/color_txt"
                            android:text="@string/notif_fusion" />

                    </LinearLayout>

                </LinearLayout>

                <!--SOCIAL CARDS LAYOUT-->
                <LinearLayout
                    android:id="@+id/linear_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:orientation="vertical"
                    android:tag="social_news"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="2dp"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginBottom="@dimen/margin"
                        android:orientation="horizontal">

                        <Switch
                            android:id="@+id/sw_social"
                            android:layout_width="70dp"
                            android:checked="false"
                            android:tag="2"
                            android:clickable="false"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/social"
                            android:textColor="#000"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="@dimen/pad"
                        android:paddingRight="@dimen/pad"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/color_txt"
                            android:text="@string/notif_social" />
                    </LinearLayout>

                </LinearLayout>

                <!--FUSION HR LAYOUT-->
                <LinearLayout
                    android:id="@+id/linear_hr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/pad"
                    android:tag="school_news"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="2dp"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"

                        android:layout_marginBottom="@dimen/margin"
                        android:layout_height="match_parent">

                        <Switch
                            android:id="@+id/sw_hr"
                            android:layout_width="62dp"
                            android:checked="false"
                            android:tag="3"
                            android:clickable="false"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_weight="5"

                            android:text="@string/hr"

                            android:textColor="#000"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="@dimen/pad"
                        android:paddingRight="@dimen/pad"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/color_txt"
                            android:text="@string/notif_hr" />
                    </LinearLayout>

                </LinearLayout>


                <!--FUSION CHAIRPERSON LAYOUT-->
                <LinearLayout
                    android:id="@+id/linear_chairman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:orientation="vertical"
                    android:tag="chairman"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="2dp"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"

                        android:layout_marginBottom="@dimen/margin"
                        android:layout_height="match_parent">

                        <Switch
                            android:id="@+id/sw_chairman"
                            android:layout_width="65dp"
                            android:checked="false"
                            android:clickable="false"
                            android:tag="4"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_weight="5"

                            android:text="@string/chairman"

                            android:textColor="#000"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="@dimen/pad"
                        android:paddingRight="@dimen/pad"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/color_txt"
                            android:text="@string/notif_chairman" />
                    </LinearLayout>

                </LinearLayout>

                <!--FUSION ALUMNI LAYOUT-->
                <LinearLayout
                    android:id="@+id/linear_alumni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBack"
                    android:orientation="vertical"
                    android:tag="alumni"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="2dp"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"

                        android:layout_marginBottom="@dimen/margin"
                        android:layout_height="match_parent">

                        <Switch
                            android:id="@+id/sw_alumni"
                            android:layout_width="70dp"
                            android:checked="false"
                            android:clickable="false"
                            android:tag="5"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_weight="5"

                            android:text="@string/alumni"

                            android:textColor="#000"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="@dimen/pad"
                        android:paddingRight="@dimen/pad"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/color_txt"
                            android:text="@string/notif_alumni" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>