<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ca.qc.lbpsb.fusion.fcmnotification.ChannelsActivity">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
         >
        <!--top user intro -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <TextView
                android:id="@+id/txtUserIntro"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginTop="55dp"
                android:paddingLeft="@dimen/pad"
                android:paddingRight="@dimen/pad"
                android:text="@string/user_intro"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <!--center user channels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <!--FUSION UPDATE LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:orientation="vertical"
                android:paddingLeft="@dimen/pad"
                android:paddingRight="@dimen/pad"
                android:layout_marginBottom="2dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="@dimen/margin"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/sw_fusion"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="5"

                        android:text="Fusion Updates"

                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notif_fusion" />
                </LinearLayout>

            </LinearLayout>

            <!--FUSION REPORT CARDS LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:orientation="vertical"
                android:paddingLeft="@dimen/pad"
                android:paddingRight="@dimen/pad"
                android:layout_marginBottom="2dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="@dimen/margin"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/sw_report"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="5"

                        android:text="New Report Cards"

                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notif_report" />
                </LinearLayout>

            </LinearLayout>

            <!--FUSION NEWS LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:orientation="vertical"
                android:paddingLeft="@dimen/pad"
                android:paddingRight="@dimen/pad"
                android:layout_marginBottom="2dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"

                    android:layout_marginBottom="@dimen/margin"
                    android:layout_height="match_parent">

                    <Switch
                        android:id="@+id/sw_news"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="5"

                        android:text="School News"

                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notif_report" />
                </LinearLayout>

            </LinearLayout>

            <!--FUSION PRINCIPALE LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:layout_marginBottom="2dp"
                android:orientation="vertical"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_height="match_parent">

                    <Switch
                        android:id="@+id/sw_principales"
                        android:layout_width="87dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="5"

                        android:text="Message From Principals"

                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                     >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notif_report" />
                </LinearLayout>

            </LinearLayout>

            <!--FUSION BUS LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:orientation="vertical"
                android:layout_marginBottom="2dp"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_height="match_parent">

                    <Switch
                        android:id="@+id/sw_bus"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="5"

                        android:text="Bus Planning"

                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notif_report" />
                </LinearLayout>

            </LinearLayout>

            <!--FUSION ALUMNI LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBack"
                android:orientation="vertical"
                android:layout_marginBottom="2dp"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_height="match_parent">

                    <Switch
                        android:id="@+id/sw_alumni"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_weight="5"

                        android:text="LBPSB Alumni"

                        android:textColor="#000"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="@dimen/pad"
                    android:paddingRight="@dimen/pad"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/notif_report" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>

    </ScrollView>